crates/shipper-core/src/state/execution_state/snapshots/shipper_core__state__execution_state__tests__receipt_all_failed.snap
---
source: crates/shipper-core/src/state/execution_state/tests.rs
expression: json
---
{
  "receipt_version": "shipper.receipt.v2",
  "plan_id": "all-failed-plan",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "started_at": "2025-01-15T12:00:00Z",
  "finished_at": "2025-01-15T12:10:00Z",
  "packages": [
    {
      "name": "core",
      "version": "1.0.0",
      "attempts": 3,
      "state": {
        "state": "failed",
        "class": "retryable",
        "message": "registry timeout after 3 attempts"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:10:00Z",
      "duration_ms": 180000,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    },
    {
      "name": "utils",
      "version": "0.5.0",
      "attempts": 1,
      "state": {
        "state": "failed",
        "class": "permanent",
        "message": "crate name is reserved"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:10:00Z",
      "duration_ms": 5000,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    }
  ],
  "event_log_path": ".shipper/events.jsonl",
  "git_context": null,
  "environment": {
    "shipper_version": "0.3.0",
    "cargo_version": "1.82.0",
    "rust_version": "1.82.0",
    "os": "linux",
    "arch": "x86_64"
  },
  "execution_result": "success"
}
